fix: color contrast ratio

--- a/src/styles/Intro.module.css
+++ b/src/styles/Intro.module.css
@@ -49,13 +49,12 @@
   border-radius: 5rem;
   background-color: var(--accent01);
   cursor: pointer;
-  color: var(--bg01);
+  color: var(--text01);
   font-weight: 500;
   text-decoration: none;
   margin: 2rem 0;
   transition: all 200ms;
   box-shadow: var(--shadowSm);
-  font-weight: 600;
 }
 .btn:last-child {
   color: var(--text01);
