--- a/src/styles/Skills.module.css
+++ b/src/styles/Skills.module.css
@@ -36,10 +36,10 @@
   width: 100%;
   padding: 1rem 3rem;
   text-transform: capitalize;
-  color: var(--text03);
+  color: var(--text02);
   cursor: pointer;
   border-radius: 1rem;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   text-align: center;
 
   display: flex;
@@ -51,7 +51,7 @@
 
 .items:hover {
   background-color: var(--bg03);
-  color: var(--text02);
+  color: var(--text04);
   box-shadow: var(--shadowMd);
 }
 
